[SG-1922] -- Color Contrast Issues with keyboard focus indicators
SG-1922

Homepage spotlight button, "Part of" department snippet on meetings, Page not found content links adjusted to have better color contrast on the indicator

--- a/web/themes/custom/sfgovpl/src/sass/components/_banner.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_banner.scss
@@ -92,7 +92,7 @@
   @include media($medium-screen) {
     order: 2;
   }
-  
+
   & img {
     max-height: 98px;
     max-width: 200px;
@@ -142,6 +142,13 @@
   // Video full
   .video-full & {
     background-color: $c-blue-2;
+  }
+
+  .page-node-type-meeting &,
+  .page-node-type-data-story & {
+    .hero-banner-label *:focus {
+      outline-color: $c-white;
+    }
   }
 }
 
